--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/css/global.css">
     <link rel="stylesheet" href="src/css/main.css">
     <title>Newsletter</title>
+    <link rel="icon" type="image/x-icon" href="src/images/favicon-32x32.png">
 </head>
 
 <body>
